--- a/portfolio.html
+++ b/portfolio.html
@@ -21,20 +21,17 @@
   <body>
     <header class="header">
       <div class="container">
+        <!-- logo -->
+        <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio </a>
+
         <!-- navigation -->
         <nav class="header-nav">
-          <!-- logo -->
-          <a class="logo" href="./index.html"
-            ><span class="logo-web">Web</span>Studio
-          </a>
           <ul class="site-nav">
-            <li class="nav-item">
-              <a class="link" href="./index.html">Студія</a>
-            </li>
+            <li class="nav-item"><a class="link " href="./index.html">Студія</a></li>
             <li class="nav-item">
               <a class="link active" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="nav-item"><a class="link" href="">Контакти</a></li>
+            <li class="nav-item"><a class="link " href="">Контакти</a></li>
           </ul>
         </nav>
 
@@ -56,6 +53,12 @@
             >
           </li>
         </ul>
+        <button type="button" class="menu-buttons js-open-menu" aria-expanded="false"
+        aria-controls="mobile-menu">
+          <svg width="40" height="40">
+            <use href="./images/icons/icons.svg#menu_40px"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -313,94 +316,93 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-main">
-        <div class="footer-contacts">
-          <a class="logo-footer" href="./index.html"
-            ><span class="logo-web">Web</span>Studio</a
-          >
-          <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
-          <ul>
-            <li class="adress-item">
-              <a href="mailto:info@devstudio.com" class="contacts"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="adress-item">
-              <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-group">
-          <h3 class="footer-title">приєднуйтесь</h3>
-          <ul class="footer-list">
-            <li class="footer-item">
-              <a
-                class="footer-link"
-                href="https://instagram.com"
-                target="_blank"
-                rel="noopener norefferer"
-                aria-label="Instagram"
-              >
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-item">
-              <a
-                class="footer-link"
-                href="https://twitter.com"
-                target="_blank"
-                rel="noopener norefferer"
-                aria-label="Twitter"
-              >
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-item">
-              <a
-                class="footer-link"
-                href="https://facebook.com"
-                target="_blank"
-                rel="noopener norefferer"
-                aria-label="Facebook"
-              >
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-item">
-              <a
-                class="footer-link"
-                href="https://linkedin.com"
-                target="_blank"
-                rel="noopener norefferer"
-                aria-label="LinkedIn"
-              >
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+<div class="footer-wrap">
+  <div class="footer-contacts">
+    <a class="logo-footer" href="./index.html"><span class="logo-ftr">Web</span>Studio</a>
+    <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
+    <ul class="footer-group--list">
+      <li class="adress-item">
+        <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+      </li>
+      <li class="adress-item">
+        <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
+      </li>
+    </ul>
+  </div>
+  <div class="footer-group">
+    <h3 class="footer-title">приєднуйтесь</h3>
+    <ul class="footer-list">
+      <li class="footer-item">
+        <a
+          class="footer-link"
+          href="https://instagram.com"
+          target="_blank"
+          rel="noopener norefferer"
+          aria-label="Instagram"
+        >
+          <svg class="footer-icon" width="20" height="20">
+            <use href="./images/icons/icons.svg#instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer-item">
+        <a
+          class="footer-link"
+          href="https://twitter.com"
+          target="_blank"
+          rel="noopener norefferer"
+          aria-label="Twitter"
+        >
+          <svg class="footer-icon" width="20" height="20">
+            <use href="./images/icons/icons.svg#twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer-item">
+        <a
+          class="footer-link"
+          href="https://facebook.com"
+          target="_blank"
+          rel="noopener norefferer"
+          aria-label="Facebook"
+        >
+          <svg class="footer-icon" width="20" height="20">
+            <use href="./images/icons/icons.svg#facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer-item">
+        <a
+          class="footer-link"
+          href="https://linkedin.com"
+          target="_blank"
+          rel="noopener norefferer"
+          aria-label="LinkedIn"
+        >
+          <svg class="footer-icon" width="20" height="20">
+            <use href="./images/icons/icons.svg#linkedin"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
         <div class="footer-mail">
           <h3 class="footer-mail-title">Підпишіться на розсилку</h3>
-        
-            <form class="footer-form">
+
+          <form class="footer-form">
+            <div class="footer_form-wrap">
               <label for="email">
-                <input type="email" name="email" id="email" class="email-form" placeholder="E-mail" >
-              </label>            
-              <button type="submit" class="subscribe-btn">
-                Підписатися
-                <svg width="24px" height="24px">
-                  <use href="./images/icons/icons.svg#send"></use>
-                </svg>
-              </button>
-            </form>
-          
+                <input type="email" name="email" id="email" class="email-form" placeholder="E-mail" />
+              </label>
+            </div>
+            <button type="submit" class="subscribe-btn">
+              Підписатися
+              <svg width="24px" height="24px">
+                <use href="./images/icons/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
