--- a/portfolio.html
+++ b/portfolio.html
@@ -406,5 +406,67 @@
         </div>
       </div>
     </footer>
+    <!-- Mobile menu -->
+<div class="menu-container js-menu-container" id="mobile-menu">
+  <button class="menu-toggle js-close-menu">
+   <svg width="40" height="40">
+    <use href="./images/icons/icons.svg#close_40px"></use>
+   </svg>
+  </button>
+
+  <ul class="mobile-nav">
+    <li class="mobile-nav__item">
+      <a
+        class="nav-mobile__link nav-mobile__link-active"
+        href="./index.html"
+        >Студія</a
+      >
+    </li>
+    <li class="mobile-nav__item">
+      <a class="nav-mobile__link" href="./portfolio.html">Портфоліо</a>
+    </li>
+    <li class="mobile-nav__item">
+      <a class="nav-mobile__link" href="">Контакти</a>
+    </li>
+  </ul>
+      <ul class="mobile-contacts">
+      <li class="mobile-contacts__item">
+        <a
+          class="mobile-contacts__link mobile-contacts__link-active"
+          href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
+      </li>
+      <li class="mobile-contacts__item">
+        <a class="mobile-contacts__link" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+      </li>
+    </ul>
+    <ul class="mobile-socials">
+      <li class="mobile-socials_item">
+        <a class="mobile-socials_link">Instagram</a>
+      </li>
+      <li class="mobile-socials_item">
+        <a class="mobile-socials_link">Twitter</a>
+      </li>
+      <li class="mobile-socials_item">
+        <a class="mobile-socials_link">Facebook</a>
+      </li>
+      <li class="mobile-socials_item">
+        <a class="mobile-socials_link">LinkedIn</a>
+      </li>
+    </ul>
+</div>
+
+<script src="./js/modal.js"></script>
+<!-- mobile script -->
+<script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
