--- a/portfolio.html
+++ b/portfolio.html
@@ -417,13 +417,13 @@
   <ul class="mobile-nav">
     <li class="mobile-nav__item">
       <a
-        class="nav-mobile__link nav-mobile__link-active"
+        class="nav-mobile__link "
         href="./index.html"
         >Студія</a
       >
     </li>
     <li class="mobile-nav__item">
-      <a class="nav-mobile__link" href="./portfolio.html">Портфоліо</a>
+      <a class="nav-mobile__link nav-mobile__link-active" href="./portfolio.html">Портфоліо</a>
     </li>
     <li class="mobile-nav__item">
       <a class="nav-mobile__link" href="">Контакти</a>
