--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
               <span class="labelform-text">Коментар</span>
               <textarea
                 class="labelform-massage"
-                name=""
+                name="comment"
                 rows="5"
                 placeholder="Введіть текст"
               ></textarea>
