--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                   srcset="./images/team/img1-md@1x.jpg 1x, ./images/team/img1-md@2x.jpg 2x"
                 />
                 <source
-                  media="(min-width: 480px)"
+                  media="(max-width: 767px)"
                   srcset="./images/team/img1-sm@1x.jpg 1x, ./images/team/img1-sm@2x.jpg 2x"
                 />
                 <img
@@ -296,7 +296,7 @@
                   srcset="./images/team/img2-md@1x.jpg 1x, ./images/team/img2-md@2x.jpg 2x"
                 />
                 <source
-                  media="(min-width: 480px)"
+                  media="(max-width: 767px)"
                   srcset="./images/team/img2-sm@1x.jpg 1x, ./images/team/img2-sm@2x.jpg 2x"
                 />
                 <img
@@ -376,7 +376,7 @@
                   srcset="./images/team/img3-md@1x.jpg 1x, ./images/team/img3-md@2x.jpg 2x"
                 />
                 <source
-                  media="(min-width: 480px)"
+                  media="(max-width: 767px)"
                   srcset="./images/team/img3-sm@1x.jpg 1x, ./images/team/img3-sm@2x.jpg 2x"
                 />
                 <img class="group-item-img" src="./images/team/img3-sm@1x.jpg" alt="наш маркетолог" />
@@ -452,7 +452,7 @@
                   srcset="./images/team/img4-md@1x.jpg 1x, ./images/team/img4-md@2x.jpg 2x"
                 />
                 <source
-                  media="(min-width: 480px)"
+                  media="(max-width: 767px)"
                   srcset="./images/team/img4-sm@1x.jpg 1x, ./images/team/img4-sm@2x.jpg 2x"
                 />
                 <img class="group-item-img" src="./images/team/img4-sm@1x.jpg" alt="наш дизайнер" />
